[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ab_utils"
version= "0.0.1"
description = "Alex's utility functions for genomic data science"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pandas-checks",
    "statannotations",
    "pypsa",
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.package-data]
"ab_utils.vis.style" = ["*.mplstyle"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
ab_utils = { path = ".", editable = true }

[tool.pixi.tasks]
